--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -112,7 +112,7 @@
 
             pr_chat_socket.on('general_notification', function (resp) {
                 if (resp['unread']) {
-                    angularControllerFunction('user_controller', 'set_unread_message_count')(resp['unread']['total']);
+                    angularControllerFunction('user_controller', 'set_unread_messages_and_notifications_count')(resp['unread']['messages'], resp['unread']['notifications'], resp['unread']['contacts']);
                 }
             });
 
