notifications are now sent after commit is done via after_flush+after_commit

--- a/profapp/templates/auth/email/reset_password.html
+++ b/profapp/templates/auth/email/reset_password.html
@@ -1,4 +1,4 @@
-{{ _('Dear %(user_name)s. Please click %(url)s to reset your password.
+{{ __('Dear %(user_name)s. Please <a href="%(url)s">follow link</a> to reset your password.
 If you have not requested a password reset simply ignore this message.', {'user_name': user.full_name,
 'url': reset_password_url}) }}
 
