--- a/profapp/templates/front/bootstrap/article_unavailable.html
+++ b/profapp/templates/front/bootstrap/article_unavailable.html
@@ -1,6 +1,6 @@
 <div>
 {{ article_unavaible['message'] }}
 {% if article_unavaible['url'] %}
-    {{ __('Please click here: %(url)s to proceed', {'url': article_unavaible['url']}) }}
+    {{ __('Please <a href="%(url)s">click here</a> to proceed', {'url': article_unavaible['url']}) }}
 {% endif %}
 </div>
