--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -64,7 +64,7 @@
                                class="form-control"
                                aria-describedby="sizing-addon1" type="text"
                                placeholder="last name" ng-model="data.user.last_name"
-                               name="last_name" ng-pattern="/[\wа-яёі']{2}/">
+                               name="last_name" oles_ng-pattern="/[\wа-яёі']{2}/">
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Your email') }}</span>
