--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -67,7 +67,7 @@
                             <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 edit-data">
                                 <input type="text" class="form-control border-radius" id="basic-url"
                                        aria-describedby="basic-addon3" pr-validation-answer="data_validation:name"
-                                       ng-model="data.portal.name" name="portal_name" ng-pattern="/[\wа-яёі']{4}/">
+                                       ng-model="data.portal.name" name="portal_name" oles_ng-pattern="/[\wа-яёі']{4}/">
                                 <div ng-show="formPortal.portal_name.$error.pattern" class="error-input"><span>{{ _('The
                                         portal name should be longer!') }}</span></div>
                             </div>
