--- a/profapp/templates/front/_common/block_user.html
+++ b/profapp/templates/front/_common/block_user.html
@@ -25,7 +25,7 @@
         }
         if (messageevent.data && messageevent.data.user {% if g.user and g.user.id %}
                     && messageevent.data.user.id !== '{{ g.user.id }}'{% endif %}) {
-            $('#profireader_user_link').attr('href', '//{{ MAIN_DOMAIN }}/users/profile/' + messageevent.data.user.id);
+            $('#profireader_user_link').attr('href', '//{{ MAIN_DOMAIN }}/user/' + messageevent.data.user.id + '/profile/');
             $('#profireader_user_link span').html(messageevent.data.welcome);
             $('#profireader_user_link img').css('background-image', 'url(' + messageevent.data.user.avatar.url + ')').show();
             $('#profireader_link').attr('href', '//{{ MAIN_DOMAIN }}');
