--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -36,13 +36,13 @@
 
     <div ng-controller="portal_create" ng-cloak>
         <form name="formPortal">
-            <div class="container" af
-                 af-after-save="afterSave"
-                 af-watch="data.portal"
-                 ng-model="data">
+            <div class="container" af af-after-save="afterSave" af-watch="data.portal" ng-model="data">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h5 class="link-page">{{ ::_('Creating new portal') }}</h5>
+                </div>
                 <div class="row company">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 link-page">
-                        <h5>{{ _('Launch portal') }}</h5>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <h5>{{ ::_('Creating new portal') }}</h5>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 create-new-company">
 
